2009-08-10  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinPixmap.c:  Eliminate more gcc warnings
	* win/tkWinWm.c:
	* win/tkWinTest.c

2009-08-09  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkInit.c Eliminate gcc warning
	* generic/tkBind.c
	* generic/tkText.c
	* generic/tkUtil.c
	* win/ttkWinXPTheme.c:  include <vssym32.h> only when available
	* win/configure.in:     check for vssym32.h, available in newer SDK's
	* win/configure         (regenerated)

2009-08-08  Donal K. Fellows  <dkf@users.sf.net>

	* library/demos/pendulum.tcl: Make the display handle being resized
	more gracefully.

2009-08-04  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkTextDisp.c (TkTextCharLayoutProc): Make the line breaking
	algorithm (in the word-wrap case) do the right thing with non-breaking
	spaces by restricting what we break on to ASCII spaces, which is good
	enough for most purposes.

2009-08-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinClipboard.c Correct check for winNT
	* win/tkWinDialog.c    Eliminate many gcc warnings
	* win/tkWinImage.c:
	* win/tkWinMenu.c:
	* win/tkWinWm.c:
	* win/tkWinX.c:
	* win/ttkWinXPTheme.c: Eliminate msvc warnings
	* win/tcl.m4:
	* win/configure
	* win/.cvsignore:      Prevent files from being checked in by accident

2009-08-01  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixWm.c (WmIconphotoCmd): [Bug 2830420]: Assemble the image
	for the window manager in a way that doesn't assume we're on a little-
	endian system.

2009-07-27  Donal K. Fellows  <dkf@users.sf.net>

	* doc/GetScroll.3: Reworded and reordered so as to indicate that the
	Tcl_Obj forms are preferred.

2009-07-26  Donal K. Fellows  <dkf@users.sf.net>

	* doc/canvas.n: Corrected description of acceptable join styles.
	Spotted by Emiliano Gavilan.

2009-07-23  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkSelect.c (HandleTclCommand): [Bug 2441988]: Stop losing
	reports of errors in selection handlers; that's what the background